--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"vite\"",
+    "server": "tsx watch server.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:security": "node verify-security.mjs"
   },
   "dependencies": {
     "react": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "tsx": "^4.7.0",
+    "concurrently": "^8.2.2"
   }
 }
